--- a/index.html
+++ b/index.html
@@ -9,92 +9,23 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 </head>
 <body>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
-    <button id="schedule">Schedule</button>
+    <button id="petWindow">Pet</button>
     <button id="back">Back</button>
     <div id="square"></div>
-    <input type="text" id="taskInput" placeholder="Add new task">
-    <button id="addTaskBtn">Add Task</button>
-    <table>
-        <thead>
-            <tr>
-                <th></th>
-                <th>LUNI</th>
-                <th>MARTI</th>
-                <th>MIERCURI</th>
-                <th>JOI</th>
-                <th>VINERI</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>7:30</td>
-                <td id="luni-7-30" contenteditable="true"></td>
-                <td id="marti-7-30" contenteditable="true"></td>
-                <td id="miercuri-7-30" contenteditable="true"></td>
-                <td id="joi-7-30" contenteditable="true"></td>
-                <td id="vineri-7-30" contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>9:00</td>
-                <td id="luni-9-00" contenteditable="true"></td>
-                <td id="marti-9-00" contenteditable="true"></td>
-                <td id="miercuri-9-00" contenteditable="true"></td>
-                <td id="joi-9-00" contenteditable="true"></td>
-                <td id="vineri-9-00" contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>10:30</td>
-                <td id="luni-10-30" contenteditable="true"></td>
-                <td id="marti-10-30" contenteditable="true"></td>
-                <td id="miercuri-10-30" contenteditable="true"></td>
-                <td id="joi-10-30" contenteditable="true"></td>
-                <td id="vineri-10-30" contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>12:00</td>
-                <td id="luni-10-30" contenteditable="true"></td>
-                <td id="marti-10-30" contenteditable="true"></td>
-                <td id="miercuri-10-30" contenteditable="true"></td>
-                <td id="joi-10-30" contenteditable="true"></td>
-                <td id="vineri-10-30" contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>13:30</td>
-                <td id="luni-10-30" contenteditable="true"></td>
-                <td id="marti-10-30" contenteditable="true"></td>
-                <td id="miercuri-10-30" contenteditable="true"></td>
-                <td id="joi-10-30" contenteditable="true"></td>
-                <td id="vineri-10-30" contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>15:00</td>
-                <td id="luni-10-30" contenteditable="true"></td>
-                <td id="marti-10-30" contenteditable="true"></td>
-                <td id="miercuri-10-30" contenteditable="true"></td>
-                <td id="joi-10-30" contenteditable="true"></td>
-                <td id="vineri-10-30" contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>16:30</td>
-                <td id="luni-10-30" contenteditable="true"></td>
-                <td id="marti-10-30" contenteditable="true"></td>
-                <td id="miercuri-10-30" contenteditable="true"></td>
-                <td id="joi-10-30" contenteditable="true"></td>
-                <td id="vineri-10-30" contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>18:00</td>
-                <td id="luni-10-30" contenteditable="true"></td>
-                <td id="marti-10-30" contenteditable="true"></td>
-                <td id="miercuri-10-30" contenteditable="true"></td>
-                <td id="joi-10-30" contenteditable="true"></td>
-                <td id="vineri-10-30" contenteditable="true"></td>
-            </tr>
-        </tbody>
-    </table>
+    <img id="pet" src="images/dog.jpg" alt="dog picture">
+    <img id="dogPlaying" src="images/walking.jpg" alt="dog playing">
+    <button id="jump">Jump</button>
+    <button id="feed">Feed</button>
+    <button id="play">Play</button>
+    <button id="stopPlay">Stop playing</button>
+
+    <img id="foodPicture" src="images/food.jpg" alt="Food">
+    
 </body>
 </html>
