added table to local storage

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <button id="schedule">Schedule</button>
     <button id="back">Back</button>
     <div id="square"></div>
+    <button id="saveBtn">Save to LocalStorage</button>
+    <button id="loadBtn">Load from LocalStorage</button>
     <input type="text" id="taskInput" placeholder="Add new task">
     <button id="addTaskBtn">Add Task</button>
-    <table>
+    <table id="scheduleTable">
         <thead>
             <tr>
                 <th></th>
